--- a/module5/ss6_form/form/src/app/app.component.html
+++ b/module5/ss6_form/form/src/app/app.component.html
@@ -1,2 +1,3 @@
 <!--<app-todo-app></app-todo-app>-->
-<app-register-component></app-register-component>
+<!--<app-register-component></app-register-component>-->
+<app-form-login></app-form-login>
