--- a/module5/ss7_service/router-product/angular-product-management/src/app/product/product-list/product-list.component.html
+++ b/module5/ss7_service/router-product/angular-product-management/src/app/product/product-list/product-list.component.html
@@ -1,4 +1,5 @@
 <h1>Danh sách sản phẩm</h1>
+
 <table>
   <tr>
     <td>STT</td>
@@ -11,5 +12,10 @@
     <td>{{product.name}}</td>
     <td>{{product.price}}</td>
     <td>{{product.description}}</td>
+    <td>
+    <a [routerLink]="['/product/edit',product.id]" class="btn btn-outline-warning">Edit</a>
+    <a [routerLink]="['/product/delete',product.id]" class="btn btn-outline-danger">Delete</a>
+    </td>
+
   </tr>
 </table>
