--- a/module5/Case_Study/case-study/src/app/customer-list/customer-list.component.html
+++ b/module5/Case_Study/case-study/src/app/customer-list/customer-list.component.html
@@ -1,5 +1,5 @@
 <!-- Customer list -->
-<table class="table table-striped table-light">
+<table class="table table-success">
   <tr>
     <th>Mã khách hàng</th>
     <th>Tên</th>
