--- a/module5/ss7_service/router-product/angular-product-management/src/app/product/product-list/product-list.component.html
+++ b/module5/ss7_service/router-product/angular-product-management/src/app/product/product-list/product-list.component.html
@@ -1,6 +1,6 @@
 <h1>Danh sách sản phẩm</h1>
 
-<table>
+<table class="table table-dark">
   <tr>
     <td>STT</td>
     <td>Tên</td>
@@ -14,7 +14,7 @@
     <td>{{product.description}}</td>
     <td>
     <a [routerLink]="['/product/edit',product.id]" class="btn btn-outline-warning">Edit</a>
-    <a [routerLink]="['/product/delete',product.id]" class="btn btn-outline-danger">Delete</a>
+    <a [routerLink]="['/product',product.id]" class="btn btn-outline-danger">Delete</a>
     </td>
 
   </tr>
