--- a/module5/ss7_service/tu-dien/tu-dien-angular/src/app/app.component.html
+++ b/module5/ss7_service/tu-dien/tu-dien-angular/src/app/app.component.html
@@ -1,3 +1,6 @@
 <a routerLink="/dic/page">List</a><br>
 <a routerLink="/dic/detail">Dich</a>
 <router-outlet></router-outlet>
+<br>
+<h1>count down</h1><br>
+<app-count-down></app-count-down>
