--- a/module5/Case-study/Furma/furma-caseStudy/src/app/customer-vip/customer-vip.component.html
+++ b/module5/Case-study/Furma/furma-caseStudy/src/app/customer-vip/customer-vip.component.html
@@ -51,6 +51,6 @@
     </table>
   </div>
 </div>
-<app-create-customer></app-create-customer>
+<app-create-cus></app-create-cus>
 <app-update-cus></app-update-cus>
 <app-delete-cus [inputCode]="codeCustomer"></app-delete-cus>
