--- a/module5/Case-study/Furma/furma-caseStudy/src/app/footer/footer.component.html
+++ b/module5/Case-study/Furma/furma-caseStudy/src/app/footer/footer.component.html
@@ -2,10 +2,11 @@
   <div class="container text-center text-md-start">
     <div class="row">
       <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-        <h6 class="text-uppercase fw-bold mt-4">FURAMA RESORT DANANG</h6>
+        <h6 class="text-uppercase fw-bold mt-4">FURAMA RESORT</h6>
         <hr class="mb-4 mt-0 d-inline-block mx-auto" style="width: 60px; background-color: #7c4dff; height: 2px"/>
         <p>Tọa lạc tại trung tâm của thành phố lớn nhất miền Trung, FURAMA RESORT hận hạnh được phục vụ quý khách!</p>
       </div>
+      ---
       <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
         <h6 class="text-uppercase fw-bold mt-4">Chi Nhanh</h6>
         <hr class="mb-4 mt-0 d-inline-block mx-auto" style="width: 60px; background-color: #7c4dff; height: 2px"/>
@@ -19,6 +20,7 @@
           <a href="#" class="text-white text-decoration-none">Hà Nội</a>
         </p>
       </div>
+      ---
       <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
         <h6 class="text-uppercase fw-bold mt-4">Về chúng tôi</h6>
         <hr class="mb-4 mt-0 d-inline-block mx-auto" style="width: 60px; background-color: greenyellow; height: 2px"/>
@@ -35,6 +37,7 @@
           <a href="#" class="text-white text-decoration-none">Trợ giúp</a>
         </p>
       </div>
+      ---
       <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
         <h6 class="text-uppercase fw-bold mt-4">Contact</h6>
         <hr class="mb-4 mt-0 d-inline-block mx-auto" style="width: 60px; background-color: #7c4dff; height: 2px"/>
