--- a/module5/Case-study/Furma/furma-caseStudy/src/app/body/body.component.html
+++ b/module5/Case-study/Furma/furma-caseStudy/src/app/body/body.component.html
@@ -1,7 +1,7 @@
 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="3000">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="../../assets/home-img/" alt="Second slide">
+      <img class="d-block w-100" src="../../assets/home-img/home3-resort.jpg" alt="Second slide">
     </div>
     <div class="carousel-item">
       <img class="d-block w-100" src="../../assets/home-img/home1-resort.jpg" alt="Third slide">
